<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/register_et_username"
            android:hint="@string/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:ems="10"
            android:padding="20dp"/>
        <EditText
            android:id="@+id/register_et_nickname"
            android:hint="@string/editText_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:ems="10"
            android:padding="20dp"/>
        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:ems="10"
            android:hint="@string/editText_password"
            android:padding="20dp"/>
        <EditText
            android:id="@+id/register_et_passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:ems="10"
            android:hint="@string/editText_passwordConfirm"
            android:padding="20dp"/>

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:rotation="0"
            android:text="@string/btn_upload"
            app:backgroundTint="@color/greyer"/>
<!--            app:src="@drawable/ic_img"-->
<!--            app:srcCompat="@drawable/ic_img" />-->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/green_theme"

            android:text="@string/btn_registerBtn" />
        <TextView
            android:id="@+id/textView_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#dd0000"
            android:text="hey"
            android:visibility="invisible"
            android:gravity="center"/>

        <View
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/black"
            android:alpha="0.9"
            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/grey"
            android:text="@string/btn_loginbtn" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>